# WaiGuGe

./: README.md
EPOS_Linux_Library/: install.sh
EPOS_Linux_Library/examples/HelloEposCmd/: CMakeCache.txt  CMakeLists.txt  DEV_Config.c  DEV_Config.h  HelloEposCmd.cbp  HelloEposCmd.cpp  Makefile  Motor.cpp  Motor.h  client  client.cpp  cmake_install.cmake  emg_adc.c  emg_adc.h  emgdata.c  filter.cpp  filter.h  initial.cpp  initial.h  makefileemg  serial.cpp  serial.h  server  server.cpp  server.h  tes.cpp  tes.h
c2/examples/: CMakeCache.txt  CMakeLists.txt  DEV_Config.cpp  DEV_Config.h  EMGData.cpp  EMGData.h  EMGFilters.cpp  EMGFilters.h  Makefile  Motor.cpp  Motor.h  MotorControl.cpp  MotorControl.h  bcm2835.c  cmake_install.cmake  initial.cpp  initial.h  kalman_Filter.cpp  kalman_Filter.h  keyboard.cpp  keyboard.h  main  main.cpp  server.cpp  server.h  test  test.cpp
c2/lib/Config/: DEV_Config.c
chart/: CMakeCache.txt  CMakeLists.txt  Makefile  QTshiboqi  a.out  client  client copy.cpp  client.cpp  client.h  cmake_install.cmake  main.cpp  socketclient.cpp  socketclient.h  widget.cpp  widget.h
chart/QTshiboqi_autogen/EWIEGA46WW/: moc_widget.cpp
chart/QTshiboqi_autogen/include/: ui_widget.h
